# backend/internal/delivery/http/todo_handler.go
@@ -3,7 +3,9 @@ package http
 import (
 	"strconv"
 
+	"github.com/golang-jwt/jwt/v5"
 	"github.com/hamwiwatsapon/todo-projects/backend/internal/domain"
+	"github.com/hamwiwatsapon/todo-projects/backend/internal/middleware"
 
 	"github.com/gofiber/fiber/v2"
 )
@@ -17,16 +19,18 @@ func NewTodoHandler(app *fiber.App, usecase domain.TodoUsecase) {
 		todoUsecase: usecase,
 	}
 
-	app.Post("/todos", handler.CreateTodo)
-	app.Get("/todos", handler.GetAllTodos)
-	app.Get("/todos/:id", handler.GetTodo)
-	app.Put("/todos/:id", handler.UpdateTodo)
-	app.Delete("/todos/:id", handler.DeleteTodo)
+	authenticated := app.Group("/auth", middleware.JwtMiddleware())
+	authenticated.Post("/todos", handler.CreateTodo)
+	authenticated.Get("/todos", handler.GetAllTodos)
+	authenticated.Get("/todos/:id", handler.GetTodo)
+	authenticated.Put("/todos/:id", handler.UpdateTodo)
+	authenticated.Delete("/todos/:id", handler.DeleteTodo)
 }
 
 // Create to do.
 // @Summary Create to do.
 // @Description Use for create to do.
+// @Authrorization Bearer
 // @Tags todo
 // @Accept json
 // @Produce json
@@ -34,14 +38,27 @@ func NewTodoHandler(app *fiber.App, usecase domain.TodoUsecase) {
 // @Success 201 {object} domain.Todo
 // @Failure 400 {object} domain.ErrorResponse400 "Bad Request"
 // @Failure 500 {object} domain.ErrorResponse500 "Internal Server Error"
-// @Router /todos [post]
+// @Router /auth/todos [post]
 func (h *TodoHandler) CreateTodo(c *fiber.Ctx) error {
+	// Extract user claims from context
+	userClaims := c.Locals("user").(jwt.MapClaims)
+
+	// Extract userID from claims
+	userID, ok := userClaims["user_id"].(string)
+	if !ok {
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{
+			"error": "Invalid user ID in token",
+		})
+	}
+
 	todo := new(domain.CreateTodoDTO)
 	if err := c.BodyParser(todo); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
 			"error": err.Error(),
 		})
 	}
+	// Set the userID in the DTO
+	todo.UserID = userID
 
 	createdTodo, err := h.todoUsecase.Create(todo)
 	if err != nil {
@@ -61,9 +78,21 @@ func (h *TodoHandler) CreateTodo(c *fiber.Ctx) error {
 // @Produce json
 // @Success 200 {array} domain.Todo
 // @Failure 500 {object} domain.ErrorResponse500 "Internal Server Error"
-// @Router /todos [get]
+// @Security BearerAuth
+// @Router /auth/todos [get]
 func (h *TodoHandler) GetAllTodos(c *fiber.Ctx) error {
-	todos, err := h.todoUsecase.GetAll()
+	// Extract user claims from context
+	userClaims := c.Locals("user").(jwt.MapClaims)
+
+	// Extract userID from claims
+	userID, ok := userClaims["user_id"].(string)
+	if !ok {
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{
+			"error": "Invalid user ID in token",
+		})
+	}
+
+	todos, err := h.todoUsecase.GetAllByUserID(userID)
 	if err != nil {
 		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
 	}
@@ -82,7 +111,8 @@ func (h *TodoHandler) GetAllTodos(c *fiber.Ctx) error {
 // @Failure 400 {object} domain.ErrorResponse400 "Bad Request"
 // @Failure 404 {object} domain.ErrorResponse404 "Todo not found"
 // @Failure 500 {object} domain.ErrorResponse500 "Internal Server Error"
-// @Router /todos/{id} [get]
+// @Security BearerAuth
+// @Router /auth/todos/{id} [get]
 func (h *TodoHandler) GetTodo(c *fiber.Ctx) error {
 	id, err := strconv.ParseUint(c.Params("id"), 10, 32)
 	if err != nil {
@@ -111,7 +141,8 @@ func (h *TodoHandler) GetTodo(c *fiber.Ctx) error {
 // @Success 200 {object} domain.Todo
 // @Failure 404 {object} domain.ErrorResponse404 "Todo not found"
 // @Failure 500 {object} domain.ErrorResponse500 "Internal Server Error"
-// @Router /todos/{id} [put]
+// @Security BearerAuth
+// @Router /auth/todos/{id} [put]
 func (h *TodoHandler) UpdateTodo(c *fiber.Ctx) error {
 	id, err := strconv.ParseUint(c.Params("id"), 10, 32)
 	if err != nil {
@@ -147,7 +178,8 @@ func (h *TodoHandler) UpdateTodo(c *fiber.Ctx) error {
 // @Success 200 {object} domain.Todo
 // @Failure 400 {object} domain.ErrorResponse404 "Todo not found"
 // @Failure 500 {object} domain.ErrorResponse500 "Internal Server Error"
-// @Router /todos/{id} [delete]
+// @Security BearerAuth
+// @Router /auth/todos/{id} [delete]
 func (h *TodoHandler) DeleteTodo(c *fiber.Ctx) error {
 	id, err := strconv.ParseUint(c.Params("id"), 10, 32)
 	if err != nil {
